--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ nav ul li a:hover {
 /* header part end */
 /* -----------------QUICK LIST PART------------- */
 .quick-list {
-    padding: 50px;
+    padding: 50px 50px 130px 50px;
     display: grid;
     grid-template-columns: repeat(2,1fr);
     align-items: center;
@@ -122,4 +122,35 @@ nav ul li a:hover {
 }
 .t-part-2 {
     color: #FF900E;
+}
+/* -----------QUICK LIST PART END----------- */
+/* ----------------------Experience Part Start------------------*/
+.experience {
+    display: flex;
+    padding: 0 100px 0 100px;
+}
+.experience-text-header h1 {
+    font-size: 2.8em;
+    margin-bottom: 15px;
+    padding-left: 10px;
+    border-left: 4px solid #FF900E;
+}
+.experience-text-header p {
+    margin-bottom: 20px;
+}
+.experience-imageBox img {
+    width: 40vw;
+    margin-left: 30px;
+}
+.card {
+    width: 500px;
+    height: 100px;
+    margin-bottom: 10px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+}
+.card h1 {
+    font-size: 1.25em;
+    font-weight: 600;
 }
