--- a/css/style.css
+++ b/css/style.css
@@ -9,18 +9,17 @@
 /* ------- header css start here-----------*/
 header {
     width: 100%;
-    height: 105vh;
+    height: 900px;
     background-color: #FF900E1A;
 }
 
 /* ---navbar part--- */
 .nav-bar {
-    width: 100%;
+    width: 90%;
     height: 80px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    transition: 7s;
 }
 
 .logo {
@@ -51,7 +50,7 @@ nav ul li a:hover {
 
 /* ----Header Text Part -----*/
 .header-text h1 {
-    font-size: 3.5em;
+    font-size: 56px;
     text-align: center;
 }
 
@@ -73,7 +72,7 @@ nav ul li a:hover {
     height: 64px;
     background-color: #FF900E;
     border: 0;
-    font-size: 1em;
+    font-size: 18px;
     font-weight: 500;
     border-radius: 8px;
     color: #fff;
@@ -95,22 +94,23 @@ nav ul li a:hover {
 /* header part end */
 /* -----------------QUICK LIST PART------------- */
 .quick-list {
-    padding: 50px 50px 130px 50px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    justify-content: space-around;
     align-items: center;
-    column-gap: 24px;
+    gap: 30px;
+    padding: 50px 50px 130px 100px;
 }
 
 .quick-list-img {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 24px;
-    border-radius: 8px
+    border-radius: 8px;
 }
 
 .quick-list-img img {
-    width: 100%;
+    width: 250px;
+    height: 250px;
 }
 
 /* quick list text coloring */
@@ -137,7 +137,7 @@ nav ul li a:hover {
 .experience {
     display: flex;
     padding: 0 100px 0 100px;
-    margin-bottom: 60px;
+    margin-bottom: 100px;
 }
 
 .experience-text-header h1 {
@@ -183,4 +183,145 @@ nav ul li a:hover {
     border-radius: 8px;
     width: 150px;
     height: 100px;
+}
+
+/* ------------------SOME FACT PART START--------------------- */
+.some-fact-text {
+    padding-left: 10%;
+}
+.some-fact-text h1 {
+    font-size: 2.8em;
+}
+.some-fact-text p {
+    font-size: 1.2em;
+}
+.some-fact-content {
+    display: flex;
+    justify-content: space-around;
+}
+.some-fact-card {
+    width: 150px;
+    height: 150px;
+    border: 2px solid #FF900E;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 100px;
+}
+/* ----------------SOME FACT PART END---------------- */
+/* ------------------Our Sponspors Part--------------- */
+.sponspors-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 100px auto 60px auto;
+    text-align: center;
+}
+.sponspors-text h1 {
+    font-size: 2.8em;
+    margin-bottom: 15px;
+}
+.sopnspors-company {
+    display: flex;
+    justify-content: space-around;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+.sopnspors-company img
+{
+    filter: grayscale(100%);
+    transition: 0.5s;
+}
+.sopnspors-company img:hover {
+    filter: grayscale(0%);
+    cursor: pointer;
+}
+/* -------------------FOOTER CSS START------------------ */
+
+
+/* ----------------RESPONSIVE CSS START HERE------------------- */
+@media only screen and (max-width:576px) {
+    header {
+        height: 800px;
+    }
+
+    nav ul {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 10px;
+        margin-top: 10px;
+    }
+
+    nav ul li a {
+        background-color: #FF900E;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .nav-bar,
+    .experience {
+        padding-top: 20px;
+        flex-direction: column;
+        padding-left: 10px;
+    }
+
+    .header-text h1 {
+        font-size: 2.5em;
+        margin-top: 28px;
+    }
+
+    .quick-list {
+        text-align: center;
+    }
+
+    .experience {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-right: 50px;
+    }
+
+    .experience-imageBox img {
+        width: 100%;
+    }
+
+    .experience-imageBox {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .card {
+        width: 100%;
+        height: 170px;
+        /* padding: 0 auto 0 auto; */
+        padding-left: 0px;
+        padding-right: 20px;
+    }
+
+    .header-img-class img {
+        width: 100%;
+    }
+
+    .quick-list {
+        flex-direction: column-reverse;
+        padding-left: 20px;
+        padding-right: 0;
+    }
+
+    .quick-list-img {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .img-btn {
+        display: none;
+    }
+    .some-fact-content {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
