--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 /* ------- header css start here-----------*/
 header {
     width: 100%;
-    height: 900px;
+    height: 850px;
     background-color: #FF900E1A;
 }
 
@@ -169,16 +169,19 @@ nav ul li a:hover {
     font-size: 1.25em;
     font-weight: 600;
 }
-
+.experience-imageBox {
+    position: relative;
+}
 .img-btn {
     position: absolute;
-    left: 600px;
-    top: 2020px;
+    top: 550px;
+    left: 5px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: #fff;
+    border: 0;
     background: #FF900E;
     border-radius: 8px;
     width: 150px;
@@ -240,7 +243,23 @@ nav ul li a:hover {
     cursor: pointer;
 }
 /* -------------------FOOTER CSS START------------------ */
-
+footer {
+    margin-top: 100px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.footer-container {
+    width: 60%;
+    height: 100px;
+    background-color: #FFF4E7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 100px;
+    border-radius: 8px;
+}
 
 /* ----------------RESPONSIVE CSS START HERE------------------- */
 @media only screen and (max-width:576px) {
@@ -317,7 +336,7 @@ nav ul li a:hover {
         grid-template-columns: repeat(1, 1fr);
     }
     .img-btn {
-        display: none;
+       top: 70%;
     }
     .some-fact-content {
         flex-direction: column;
